--- a/Palindrome Challenge.csproj
+++ b/Palindrome Challenge.csproj
@@ -79,6 +79,7 @@
     <Content Include="Images\favicon-32x32.png" />
     <Content Include="Images\OJOlmo.jpg" />
     <Content Include="index.html" />
+    <Content Include="README.txt" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
