--- a/Palindrome Challenge.csproj
+++ b/Palindrome Challenge.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Code.html" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -78,9 +79,11 @@
     <Content Include="Images\bg1.png" />
     <Content Include="Images\favicon-32x32.png" />
     <Content Include="Images\OJOlmo.jpg" />
+    <Content Include="Images\PalindromeChallenge.png" />
+    <Content Include="Content\prism-css.css" />
+    <Content Include="Scripts\prism-js.js" />
     <Content Include="Solve.html" />
     <Content Include="Index.html" />
-    <Content Include="README.txt" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -101,6 +104,7 @@
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.min.js.map" />
+    <Content Include="README.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
